k8s/manifests/service.yaml
# Service for the application
apiVersion: v1
kind: Service
metadata:
  name: password-app
  labels:
    app: password-app
spec:
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
  selector:
    app: password-app
  type: ClusterIP
